<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailMovieActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fl_frame" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/fl_frame">

                <com.github.florent37.shapeofview.shapes.DiagonalView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:shape_diagonal_angle="10"
                    app:shape_diagonal_direction="left"
                    app:shape_diagonal_position="bottom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_poster_movie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/poster_picture"/>

                </com.github.florent37.shapeofview.shapes.DiagonalView>

            </FrameLayout>

            <ImageView
                android:id="@+id/iv_poster_movie_front"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="112dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/poster_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="8dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp" />

            <RatingBar
                android:id="@+id/rb_movie"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:isIndicator="true"
                android:numStars="10"
                android:rating="4.4"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_movie_detail" />

            <TextView
                android:id="@+id/tv_rb_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="12dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/_4_3"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/rb_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_movie_detail" />

            <TextView
                android:id="@+id/tv_genre_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/coloBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rb_movie"
                android:text="@string/genre"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/coloBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_text"
                tools:text="Text" />

            <TextView
                android:id="@+id/tv_title_movie_detail"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="45dp"
                android:padding="2dp"
                android:textColor="@color/colorGolden"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster_movie_front"
                tools:text="Text" />

            <TextView
                android:id="@+id/tv_release_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/coloBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre"
                android:text="@string/release_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/coloBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date_text"
                tools:text="Text" />


            <TextView
                android:id="@+id/tv_description_text"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textColor="@color/coloBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/coloBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_text"
                tools:text="Text" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description">

                <WebView
                    android:id="@+id/mWebView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone"/>

            </FrameLayout>

            <TextView
                android:id="@+id/add_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tambah_ke_favorite"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_frame" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/fab"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/space_transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_favorite"
                app:mfb_animate_favorite="true"
                app:mfb_bounce_duration="300"
                app:mfb_color="black"
                app:mfb_rotation_angle="360"
                app:mfb_rotation_duration="400"
                app:mfb_size="60"
                app:mfb_type="heart" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</LinearLayout>